[package]
name = "egui_field_editor"
version = "0.3.0"
edition = "2024"
description = "Easily creating UI to edit and preview data"
readme = "../README.md"
repository = "https://github.com/ultrasuperpingu/egui_field_editor"
homepage = "https://github.com/ultrasuperpingu/egui_field_editor"
license = "MIT"
keywords = ["egui", "inspection", "gui"]
categories = ["gui", "development-tools", "game-development"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
egui = ">=0.33.0"
egui_dnd = ">=0.13.0"
egui_field_editor_derive = { path = "../egui_field_editor_derive" }
nalgebra-glm = { version = ">=0.20", features = [], optional = true }
egui_extras = { version = ">=0.32", features = [
    "syntect",
    "datepicker",
], optional = true }
chrono = { version = ">=0.4", features = [], optional = true }
rfd = { version = ">=0.13", features = [], optional = true }

[dev-dependencies]
eframe = ">=0.32.0"
egui_extras = { version = ">=0.32", features = ["syntect"] }
better_default = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

[features]
default = []
all = ["nalgebra_glm", "datepicker", "filepicker"]
nalgebra_glm = ["dep:nalgebra-glm"]
datepicker = ["dep:egui_extras", "egui_extras/datepicker", "dep:chrono"]
filepicker = ["dep:rfd"]

[[example]]
name = "nalgebra_glm"
path = "examples/nalgebra_glm.rs"
required-features = ["nalgebra_glm"]

[[example]]
name = "datepicker"
path = "examples/datepicker.rs"
required-features = ["datepicker"]

[[example]]
name = "filepicker"
path = "examples/filepicker.rs"
required-features = ["filepicker"]
