[package]
name = "egui_field_editor_derive"
version = "0.2.0"
edition = "2024"
description = "Proc-macro derive of egui_field_editor::EguiInspect"
license = "MIT"
repository = "https://github.com/ultrasuperpingu/egui_field_editor"
readme = "../README.md"
keywords = ["egui", "derive", "macro", "gui"]
categories = ["gui", "development-tools"]


[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2", features = ["proc-macro"] }
proc-macro2 = "1"
darling = "0.21"
