[package]
name = "egui_inspect"
version = "0.2.0"
edition = "2024"
description = "Easily creating UI to edit and preview data"
readme = "../README.md"
repository = "https://github.com/Meisterlama/egui_inspect"
homepage = "https://github.com/Meisterlama/egui_inspect"
license = "MIT"
categories = [ "gui", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.32.0"
egui_inspect_derive = { path = "../egui_inspect_derive" }
nalgebra-glm = { version = "0.20", features = [], optional=true }

[features]
default = []
nalgebra_glm = ["dep:nalgebra-glm"]

[dev-dependencies]
eframe = "0.32.0"

[[example]]
name = "nalgebra_glm"
path = "examples/nalgebra_glm.rs"
required-features = ["nalgebra_glm"]